--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # ignore contents in anim folder
 images/anim/
 
+# ignore background images
+images/background
+
 # ignore enviromental variables (.env)
 .env
