--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # ignore contents in anim folder
-images/anim/
+images/anim
 
 # ignore background images
-images/background/
+images/background
 
 # ignore enviromental variables (.env)
 .env
